# Generated by Django 5.2.4 on 2025-08-07 08:44

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='ExchangeRate',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('base_currency', models.CharField(max_length=3)),
                ('target_currency', models.CharField(max_length=3)),
                ('rate', models.DecimalField(decimal_places=6, max_digits=18)),
                ('rate_date', models.DateField()),
            ],
            options={
                'verbose_name': 'Exchange Rate',
                'verbose_name_plural': 'Exchange Rates',
                'db_table': 'exchange_rates',
                'ordering': ['-rate_date'],
                'indexes': [models.Index(fields=['base_currency', 'target_currency', 'rate_date'], name='exchange_ra_base_cu_d1044d_idx')],
                'constraints': [models.UniqueConstraint(fields=('base_currency', 'target_currency', 'rate_date'), name='unique_rate_per_day')],
            },
        ),
    ]
