# Generated by Django 5.2.4 on 2025-08-07 08:44

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('core', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='SpreadsheetImport',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('filename', models.CharField(max_length=255)),
                ('status', models.CharField(choices=[('UPLOADED', 'Uploaded'), ('PROCESSING', 'Processing'), ('COMPLETED', 'Completed'), ('FAILED', 'Failed')], default='UPLOADED', max_length=20)),
                ('uploaded_at', models.DateTimeField(auto_now_add=True)),
                ('processed_at', models.DateTimeField(blank=True, null=True)),
                ('project', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='imports', to='core.project')),
                ('uploaded_by', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='uploaded_imports', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Spreadsheet Import',
                'verbose_name_plural': 'Spreadsheet Imports',
                'db_table': 'spreadsheet_imports',
                'ordering': ['-uploaded_at'],
            },
        ),
        migrations.CreateModel(
            name='ImportError',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('row_number', models.IntegerField()),
                ('column_name', models.CharField(max_length=100)),
                ('error_msg', models.TextField()),
                ('import_ref', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='errors', to='imports.spreadsheetimport')),
            ],
            options={
                'verbose_name': 'Import Error',
                'verbose_name_plural': 'Import Errors',
                'db_table': 'import_errors',
                'ordering': ['import_ref', 'row_number'],
            },
        ),
    ]
