# Generated by Django 5.2.4 on 2025-08-07 08:44

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('core', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Milestone',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('name', models.CharField(max_length=255)),
                ('description', models.TextField(blank=True)),
                ('due_date', models.DateField()),
                ('planned_amt', models.DecimalField(decimal_places=2, default=0, max_digits=18)),
                ('status', models.CharField(choices=[('PLANNED', 'Planned'), ('IN_PROGRESS', 'In Progress'), ('ACHIEVED', 'Achieved'), ('CANCELLED', 'Cancelled')], default='PLANNED', max_length=20)),
                ('slice_start', models.DateField(blank=True, null=True)),
                ('slice_end', models.DateField(blank=True, null=True)),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='milestones', to='core.project')),
            ],
            options={
                'db_table': 'milestones',
                'ordering': ['due_date'],
                'indexes': [models.Index(fields=['project', 'due_date'], name='milestones_project_d31f6d_idx')],
            },
        ),
    ]
